# card_index

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  docker_compose.yaml  generate_fake_data.py  pyproject.toml  settings.py
.github/workflows/: run_tests.yml
controllers/api/: __init__.py  ajax_employee.py  auth.py  employee.py  position.py
controllers/html/: employee.py  html.py
db/: db.py
endpoints/: employee.py  position.py
endpoints/api/: __init__.py  auth.py  employee.py
endpoints/html/: html.py
fake_data/: job_provider.py  managers.txt  others.txt  specialist.txt
migrations/models/: 0_20241109173300_init.py  0_20241119225451_init.py  1_20241106111907_None.py  1_20241109173356_add_user_table.py  2_20241118234537_add_photo_filename_column.py  2_20241118234537_add_photo_url_column.py  3_20241119192120_rename_photo_filename_to_photo_url.py
model/: model.py
models/: models.py  user.py
schemas/: employee.py  position.py  schemas.py  token.py  user.py
security/: auth.py  jwt.py  session.py
security/guard/: roles.py
services/: employee.py
static/css/: card.css
template/: base.html  index.html  login.html  table.html  tree.html
templates/: base.html  index.html  jstree.html  login.html  tree.html
templates/employee/: card.html  create.html  edit.html
tests/: conftest.py  test_employee.py
tests/api/: test_employee_controller.py
tests/html/: test_employee_html_controller.py
